## Process this file with automake to produce Makefile.in

EXTRA_DIST = \
	k264_000.ctl \
	k264-v4l2.ctl \
	k264-v4l2-stream.ctl \
	k264-v4l2-720p-stream.ctl \
	k264-v4l2-cif-stream.ctl \
	k264-v4l2-d1-stream.ctl \
	k264-v4l2-vga-stream.ctl \
	KMp4_000.ctl \
	KMp4-v4l2.ctl \
	KMp4-v4l2-stream.ctl

pkgdata_DATA = \
	k264_000.ctl \
	k264-v4l2.ctl \
	k264-v4l2-stream.ctl \
	k264-v4l2-720p-stream.ctl \
	k264-v4l2-cif-stream.ctl \
	k264-v4l2-d1-stream.ctl \
	k264-v4l2-vga-stream.ctl \
	KMp4_000.ctl \
	KMp4-v4l2.ctl \
	KMp4-v4l2-stream.ctl
