## Process this file with automake to produce Makefile.in

# Include files to install
shcodecsincludedir = $(includedir)/shcodecs
shcodecsinclude_HEADERS = \
	encode_general.h \
	encode_h264.h \
	encode_mpeg4.h \
	encode_properties.h \
	shcodecs_common.h \
	shcodecs_decoder.h \
	shcodecs_encoder.h \
	shcodecs.h
